Fix deployment issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omars-development-hub",
-  "homepage": "https://github.com/omarmonib/omars-development-hub.git",
+  "homepage": "https://github.com/omarmonib/omars-development-hub/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.1.1"
   }
 }
