--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omars-development-hub",
-  "homepage": "https://github.com/omarmonib/omars-development-hub/",
+  "homepage": "https://omarmonib.github.io/omars-development-hub/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
